<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.yitong.recycleviewdemo.RecycleViewActivity">

    <item
        android:id="@+id/action_add"
        android:icon="@mipmap/ic_menu_add"
        android:orderInCategory="100"
        android:title="@string/add"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_delete"
        android:icon="@mipmap/ic_menu_delete"
        android:orderInCategory="100"
        android:title="@string/delete"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_listview"
        android:orderInCategory="100"
        android:title="@string/action_listview"/>

    <item
        android:id="@+id/action_gridview"
        android:orderInCategory="100"
        android:title="@string/action_gridview"/>

    <item
        android:id="@+id/action_hor_listview"
        android:orderInCategory="100"
        android:title="@string/action_hor_listview"/>

    <item
        android:id="@+id/action_hor_gridview"
        android:orderInCategory="100"
        android:title="@string/action_hor_gridview"/>

    <item
        android:id="@+id/action_staggered_gridView"
        android:orderInCategory="100"
        android:title="@string/staggeredgridview" />

</menu>